# PastExamWeb_PHY

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  package.json  pnpm-lock.yaml
backend/: .env.example  README.md  migrate.py  pyproject.toml
backend/alembic/versions/: 2f4c8a9d7b11_add_archive_submission_course_requests.py  3a7e9c1d5b42_add_archive_submission_events.py  4c7b2a1d9e80_add_course_category_badge_color.py  5b8d2f1c9a47_add_discussion_threads_and_likes.py  5f0d3fb0a1c9_drop_gemini_api_key_from_users.py  6e4a2f9c1b7d_add_user_presence_sessions.py  7c9e2d1f4a8b_add_submission_review_tables.py  7d2e1c9b5a34_add_discussion_message_pin.py  8a1c4d7e2f90_add_announcement_reads_and_personal_notifications.py  9b2c4d7e1a6f_add_course_order_index.py  9d4a8b7c2e31_add_course_category_configs.py  a1f7c5d4c9f2_add_trash_metadata_columns.py  a4c7e9d2f6b1_add_user_deleted_by_id.py  a5c7e9f2d4b6_simplify_comment_report_status.py  a8f2d9b6c4e1_normalize_course_name_parentheses.py  b1f0e7d9a2c3_normalize_course_name_parentheses_to_half.py  b3d9a4e2c1f0_add_archive_submission_admin_upload.py  b6f1e2d9a4c7_force_course_category_to_string.py  b8d1f3a6c9e2_add_github_issue_sync_fields.py  bf2c9d7a8e4f_add_last_seen_at_to_users.py  c4d8e2f1a6b9_add_user_show_level_title.py  c6e8f2a9d4b1_add_archive_submission_deleted_at.py  c7d2e4f9a1b6_add_comment_report_workflow.py  (+8 more)
backend/app/: main.py  worker.py
backend/app/api/: api.py
backend/tests/: conftest.py  test_contributor_level_settings_validation.py  test_health.py  test_presence_statistics.py  test_worker.py
(+156 files in other folders)
