[project]
name = "pastexam-backend"
version = "0.1.0"
description = "Past Exam API Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "arq>=0.25.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "minio>=7.2.15",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=8.0.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.16",
]
